[package]
name = "peerolator"
version = "0.1.0"
description = "Exchange messages with a peer at warp speed"
authors = ["Sébastien Côté <sebas642@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebas642/peerolator"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "peer", "webrtc"]
edition = "2018"

[dependencies]
anyhow = "1.0"
log = "0.4"
futures = { version = "0.3", default-features = false }
pretty_env_logger = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded"] }
warp = "0.2"

[[bin]]
name = "peerolator"
path = "src/peerolator.rs"
