[package]
name = "intercessor"
version = "0.1.0"
description = "Exchange messages between peers"
authors = ["Sébastien Côté <sebas642@gmail.com>"]
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/sebas642/intercessor"
categories = ["web-programming::http-server"]
keywords = ["warp", "server", "peer", "webrtc"]
edition = "2018"

[dependencies]
anyhow = "1.0"
log = "0.4"
futures = { version = "0.3", default-features = false }
pretty_env_logger = "0.4"
uuid = { version = "1.2", features = ["serde", "v4"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "sync", "rt-threaded"] }
warp = "0.2"

[[bin]]
name = "intercessor"
path = "src/intercessor.rs"
